Add exceptions, small changes to client/server/payload